--- a/app/globals.css
+++ b/app/globals.css
@@ -3,9 +3,15 @@
 @import "tailwindcss";
 
 :root {
-  --background: #e8f3ff;
+  --background: #FDF0F0;
   --foreground: #171717;
-
+  --highlight:#E63946; /*button and highlight */
+  --softred:#F28482; /*icon and tag */
+  --card:#FFFFFF; /*card  pannel*/
+  --textprimary:#222222;
+  --success:#2A9D8F;
+  --warning:#F4A261;
+  --error:#E76F51;
 
   --darkblue:#b6daff;
   --lightblue:#293473;
@@ -24,7 +30,9 @@
   --color-foreground: var(--foreground);
   --color-darkblue:var(--darkblue);
   --color-lightblue:var(--lightblue);
-
+ --color-card:var(--card);
+ --color-highlight:var(--highlight);
+ --color-softred:var(--softred);
   --font-puritan: var(--fontpuritan);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
