--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,9 @@
   --border-color: #E5E7EB;      /* Subtle borders */
   --success: #10B981;           /* Correct answer - soft green */
   --danger: #EF4444;            /* Wrong answer - soft red */
+
+  --bgray:#95A19F;
+  --lgray:#D6DEDB;
 }
 
 
@@ -36,6 +39,8 @@
 
 
 @theme inline {
+  --color-bgray:var(--bgray);
+  --color-lightgray:var(--lgray); 
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-primary:var(--primary);
